--- a/environment/development/e705-front/all/service-account.yaml
+++ b/environment/development/e705-front/all/service-account.yaml
@@ -1,4 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: sa-gitlab-doa-e705
+  name: sa-e705-front
+  namespace: doa-e705-dev
+  labels:
+    app: e705-app
