--- a/environment/development/e705-back/all/deployment.yaml
+++ b/environment/development/e705-back/all/deployment.yaml
@@ -20,13 +20,13 @@ spec:
         app: e705-app
       annotations:
         prometheus.io/scrape: 'true'
-        prometheus.io/port: '8080'
-        prometheus.io/path: '/api/actuator/prometheus'
+        prometheus.io/port: '8081'
+        prometheus.io/path: '/actuator/prometheus'
         co.elastic.logs/enabled: 'true'
         co.elastic.logs/json.add_error_key: 'true'
         co.elastic.logs/json.keys_under_root: 'true'
     spec:
-      serviceAccountName: sa-gitlab-doa-e705
+      serviceAccountName: sa-e705-back
       automountServiceAccountToken: false
       containers:
         - name: e705-back
@@ -36,7 +36,7 @@ spec:
             capabilities:
               drop:
                 - ALL
-          image: e705:1.0.1-854-e9551f4b
+          image: e705:1.0.1-896-40407f90
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: config
@@ -45,13 +45,22 @@ spec:
             - name: SERVER_PORT
               value: "8080"
             - name: MANAGEMENT_SERVER_PORT
-              value: "8080"
+              value: "8081"
             - name: JAVA_TOOL_OPTIONS
-              value: "-Dspring.profiles.active=dev -Dspring.config.additional-location=/opt/app/config/"
+              value: >-
+                -Dspring.profiles.active=dev
+                -Dspring.config.additional-location=/opt/app/config/
+                -XX:TieredStopAtLevel=1
+                -XX:+UseParallelGC
+                -XX:MaxRAMPercentage=75.0
+                -Dspring.jmx.enabled=false
+                -Dspring.main.lazy-initialization=false
+                -Dmanagement.server.address=0.0.0.0
+                -Dmanagement.server.port=8081
             - name: HTTP_PROXY
               value: "http://proxies.finbel.intra:8080"
             - name: APP_VERSION
-              value: "1.0.1-854-e9551f4b"
+              value: "1.0.1-896-40407f90"
             - name: HTTPS_PROXY
               value: "http://proxies.finbel.intra:8080"
             - name: NO_PROXY
@@ -65,19 +74,20 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
-            - name: management
-              containerPort: 8080
+            - name: management-port
+              containerPort: 8081
               protocol: TCP
           startupProbe:
             httpGet:
-              path: /api/actuator/health
-              port: 8080
+              path: /actuator/health/liveness
+              port: management-port
+            initialDelaySeconds: 90
             failureThreshold: 30
             periodSeconds: 10
           livenessProbe:
             httpGet:
-              path: /api/actuator/health
-              port: 8080
+              path: /actuator/health/liveness
+              port: management-port
             initialDelaySeconds: 90
             timeoutSeconds: 5
             periodSeconds: 10
@@ -85,8 +95,8 @@ spec:
             failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /api/actuator/health
-              port: 8080
+              path: /actuator/health/readiness
+              port: management-port
             initialDelaySeconds: 90
             timeoutSeconds: 5
             periodSeconds: 10
@@ -99,10 +109,11 @@ spec:
               cpu: 100m
               memory: 256Mi
               ephemeral-storage: 1Gi
+
       volumes:
         - name: config
           configMap:
             name: e705-back-config
-        - name: secret
+        - name: oauth-secrets
           secret:
             secretName: external-e705-secrets
