--- a/environment/development/e705-back/all/service-account.yaml
+++ b/environment/development/e705-back/all/service-account.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: sa-gitlab-doa-e705
+  name: sa-e705-back
   namespace: doa-e705-dev
   labels:
     app: e705-app
-    version: 1.0.1-854-e9551f4b
