--- a/environment/development/e705-back/all/service.yaml
+++ b/environment/development/e705-back/all/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: doa-e705-dev
   labels:
     app: e705-app
-    version: 1.0.1-854-e9551f4b
+    version: 1.0.1-896-40407f90
 spec:
   type: ClusterIP
   ports:
@@ -15,6 +15,10 @@ spec:
       name: http
     - port: 8080
       targetPort: 8080
+      protocol: TCP
+      name: http-alt  # Alternative name since we're exposing 8080->8080
+    - port: 8081
+      targetPort: 8081
       protocol: TCP
       name: management
   selector:
