--- a/environment/development/e705-front/all/deployment.yaml
+++ b/environment/development/e705-front/all/deployment.yaml
@@ -15,31 +15,27 @@ spec:
       labels:
         app.kubernetes.io/name: e705-ui
         app.kubernetes.io/instance: e705-ui-dev
-      annotations:
-        nginx.ingress.kubernetes.io/ssl-redirect: "true"
-        nginx.ingress.kubernetes.io/affinity: "cookie"
-        nginx.ingress.kubernetes.io/session-cookie-name: "e705Cookie"
-        nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
-        nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
-        nginx.ingress.kubernetes.io/enable-cors: "true"
-        nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-        nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, PATCH, OPTIONS"
-        nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Origin, X-Requested-With, Content-Type, Accept"
     spec:
-      serviceAccountName: sa-gitlab-doa-e705
+      serviceAccountName: sa-e705-front
       securityContext:
-        runAsUser: 1000
-        runAsGroup: 3000
+        runAsNonRoot: true
+      automountServiceAccountToken: false
       containers:
         - name: e705-ui
           securityContext:
             allowPrivilegeEscalation: false
             runAsNonRoot: true
+            capabilities:
+              drop:
+                - ALL
           image: e705-ui
           imagePullPolicy: IfNotPresent
           env:
             - name: SERVER_PORT
               value: "8080"
+            # Debug
+            - name: USER_ID
+              value: "$(id -u)"  # This will show what UID is actually being used
           envFrom:
             - configMapRef:
                 name: e705-ui-config
@@ -53,3 +49,4 @@ spec:
             requests:
               cpu: 100m
               memory: 256Mi
+              ephemeral-storage: "2Gi"
