--- a/environment/development/e705-front/all/ingress.yaml
+++ b/environment/development/e705-front/all/ingress.yaml
@@ -20,10 +20,10 @@ metadata:
     minfin.oauth2.be/errorPage403: "http://ccffwbacc.finbel.intra/error/oam/pas-acces-geen-toegang.html"
 spec:
   ingressClassName: "oauth2"
-  tls:
-    - hosts:
-        - e705.dev.finbel.intra
-      secretName: e705-tls
+#  tls:
+#    - hosts:
+#        - e705.dev.finbel.intra
+#      secretName: e705-tls
   rules:
     - host: e705.dev.finbel.intra
       http:
