--- a/environment/development/e705/all/kustomization.yaml
+++ b/environment/development/e705/all/kustomization.yaml
@@ -1,5 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ./../../../../kustomize/e705/
-patches: []
+namespace: doa-e705-dev
+resources: []
