--- a/environment/production/e705/all/kustomization.yaml
+++ b/environment/production/e705/all/kustomization.yaml
@@ -1,13 +1,5 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-  - ./../../../../kustomize/e705/
+resources: []
 patches: []
-#helmCharts:
-#  - name: "e705"
-#    repo: "oci://finvmharborp01.finbel.intra/doa-e705/charts"
-#    releaseName: "e705"
-#    namespace: "doa-e705-prod"
-#    version: 0.0.1
-#    valuesFile: base_values.yaml
