--- a/environment/development/e705-back/all/config/application.yaml
+++ b/environment/development/e705-back/all/config/application.yaml
@@ -1,6 +1,8 @@
 # Combined Application Configuration
 spring:
   # Database Configuration
+  main:
+    lazy-initialization: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:db2://zldbdead2.rdc.finbel.intra:50970/E705
@@ -11,6 +13,7 @@ spring:
 
   # JPA Configuration
   jpa:
+    defer-datasource-initialization: true
     database-platform: org.hibernate.dialect.DB2Dialect
     database: db2
     show-sql: true
@@ -86,6 +89,10 @@ server:
 management:
   server:
     port: 8081
+  endpoint:
+    health:
+      probes:
+        add-additional-paths: true
   endpoints:
     web:
       base-path: /actuator
