--- a/environment/development/e705-front/all/service.yaml
+++ b/environment/development/e705-front/all/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: e705-ui-service
+  namespace: doa-e705-dev
+  labels:
+    app: e705-app
 spec:
   type: ClusterIP
   ports:
@@ -10,5 +13,6 @@ spec:
       protocol: TCP
       name: http
   selector:
+    app: e705-app
     app.kubernetes.io/name: e705-ui
     app.kubernetes.io/instance: e705-ui-dev
