--- a/environment/development/e705-back/all/deployment.yaml
+++ b/environment/development/e705-back/all/deployment.yaml
@@ -13,11 +13,13 @@ spec:
   selector:
     matchLabels:
       app: e705-app
+      component: e705-backend
   template:
     metadata:
       namespace: doa-e705-dev
       labels:
         app: e705-app
+        component: e705-backend
       annotations:
         prometheus.io/scrape: 'true'
         prometheus.io/port: '8081'
