--- a/environment/development/e705-front/all/deployment.yaml
+++ b/environment/development/e705-front/all/deployment.yaml
@@ -11,11 +11,13 @@ spec:
   selector:
     matchLabels:
       app: e705-app
+      component: e705-frontend
   template:
     metadata:
       namespace: doa-e705-dev
       labels:
         app: e705-app
+        component: e705-frontend
     spec:
       serviceAccountName: sa-e705-front
       automountServiceAccountToken: false
